tests/samples/invalid/multiple_invalid_escapes.pn
fn main()
{
	var x = "Is \z or \2 a valid escape?";
}
